bump dependencies and java version